<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".AppointmentsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appointments_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointments"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true">
        </TextView>

        <TextView
            android:id="@+id/home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_below="@id/appointments_text"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_below="@id/appointments_text"
            android:layout_toRightOf="@id/home_text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/below_Appointment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointments"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_below="@id/appointments_text"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"/>

        <Button
            android:id="@+id/create_appointment_btn"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/create_appointments"
            android:layout_below="@id/home_text"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:padding="9dp"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/appointment_btn_1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/appointments_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/create_appointment_btn"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>



    </RelativeLayout>

</ScrollView>
