<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dashboard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true">
    </TextView>

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/dashboard_text"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@id/dashboard_text"
        android:layout_toRightOf="@id/home_text"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/below_dashboard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@id/dashboard_text"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="72dp"/>

    <TextView
        android:id="@+id/hello_admin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slash"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/hello_admin"
        android:textColor="@color/pinkish"
        android:textSize="40dp">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello_admin_text"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dashboard_image"
                android:layout_width="83dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dashboard_pic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/text_1"
                    android:textColor="@color/background"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/text_2"
                    android:textColor="@color/black"/>


                <Button
                    android:id="@+id/my_button"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg"
                    android:padding="7dp"
                    android:text="@string/btn_1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_1"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- Text 1 (Admin) -->
                <TextView
                    android:id="@+id/admin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/admin"
                    android:textColor="@color/blue"
                    android:layout_marginBottom="10dp"/>

                <!-- Circle Image -->
                <ImageView
                    android:id="@+id/circle_pic"
                    android:layout_width="63dp"
                    android:layout_height="78dp"
                    android:layout_marginRight="2dp"
                    android:layout_gravity="center"

                    android:src="@drawable/circle_pic" />

                <!-- Icon -->
                <ImageView
                    android:id="@+id/admin_icon"
                    android:layout_width="46dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-63.5dp"
                    android:layout_marginRight="2dp"

                    android:src="@drawable/admin_icon" /> <!-- Align icon to the start of the layout, vertically centered -->

            </LinearLayout>

            <!-- Number -->
            <TextView
                android:id="@+id/number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="1"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_2"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- Text 1 (Admin) -->
                <TextView
                    android:id="@+id/technician_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/technician"
                    android:textColor="@color/background"
                    android:layout_marginBottom="10dp"/>

                <!-- Circle Image -->
                <ImageView
                    android:id="@+id/circle_pic_1"
                    android:layout_width="63dp"
                    android:layout_height="78dp"
                    android:layout_marginRight="2dp"
                    android:layout_gravity="center"

                    android:src="@drawable/circle_pic" />

                <!-- Icon -->
                <ImageView
                    android:id="@+id/technician_icon"
                    android:layout_width="46dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-63.5dp"
                    android:layout_marginRight="2dp"
                    android:src="@drawable/technician_icon" /> <!-- Align icon to the start of the layout, vertically centered -->

            </LinearLayout>

            <!-- Number -->
            <TextView
                android:id="@+id/number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="2"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_3"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <!-- Text 1 (Admin) -->
                <TextView
                    android:id="@+id/secretary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/secretary"
                    android:textColor="@color/background"
                    android:layout_marginBottom="10dp"/>

                <!-- Circle Image -->
                <ImageView
                    android:id="@+id/circle_pic_2"
                    android:layout_width="63dp"
                    android:layout_height="78dp"
                    android:layout_marginRight="2dp"
                    android:layout_gravity="center"

                    android:src="@drawable/circle_pic" />

                <!-- Icon -->
                <ImageView
                    android:id="@+id/secretary_icon"
                    android:layout_width="45dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-59dp"
                    android:layout_marginRight="2dp"

                    android:src="@drawable/secretary_icon" /> <!-- Align icon to the start of the layout, vertically centered -->

            </LinearLayout>

            <!-- Number -->
            <TextView
                android:id="@+id/number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="3"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view_4"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!-- Text 1 (Admin) -->
                    <TextView
                        android:id="@+id/customer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="@string/customer"
                        android:textColor="@color/background"
                        android:layout_marginBottom="10dp"/>

                    <!-- Circle Image -->
                    <ImageView
                        android:id="@+id/circle_pic_3"
                        android:layout_width="63dp"
                        android:layout_height="78dp"
                        android:layout_marginRight="2dp"
                        android:layout_gravity="center"
                        android:src="@drawable/circle_pic" />

                    <!-- Icon -->
                    <ImageView
                        android:id="@+id/customer_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="-59dp"
                        android:layout_marginRight="2dp"
                        android:src="@drawable/customer_icon" />  <!-- Align icon to the start of the layout, vertically centered -->

                </LinearLayout>

                <!-- Number -->
                <TextView
                    android:id="@+id/number_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="1"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</ScrollView>
